--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "live-server": "^1.2.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
+    "script-loader": "^0.7.2",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1"
   }
