--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "popper.js": "^1.12.5",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "react-spinkit": "^3.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
