--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
-    "react-spinkit": "^3.0.0",
-    "underscore": "^1.8.3"
+    "react-spinkit": "^3.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
